# iota-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arduino-cli.cmake  profile.sh  teensy41.cmake  update.sh
iota-repl/: CMakeLists.txt
iota-repl/src/: IotaRepl.cpp  IotaRepl.h  main.cpp
iota-stdio/: CMakeLists.txt  IostreamConnection.cpp  IostreamConnection.h  IostreamStorageConnection.cpp  IostreamStorageConnection.h  IotaMain.cpp  IotaMain.h  main.cpp
iota-tests/: CMakeLists.txt  main.cpp
iota-tests/dyad_tests/: divide_tests.cpp  drop_tests.cpp  equal_tests.cpp  find_tests.cpp  form_tests.cpp  format2_tests.cpp  index_tests.cpp  integerDivide_tests.cpp  plus_tests.cpp  remainder_tests.cpp  split_tests.cpp  times_tests.cpp
iota-tests/effect_tests/: coding_problems.cpp  log_tests.cpp  random_tests.cpp  state_tests.cpp
iota-tests/monad_tests/: atom_tests.cpp  char_tests.cpp  enclose_tests.cpp  enumerate_tests.cpp  first_tests.cpp  floor_tests.cpp  format_tests.cpp  gradeDown_tests.cpp  gradeUp_tests.cpp  group_tests.cpp  not_tests.cpp  noun_tests.cpp  reverse_tests.cpp  shape_tests.cpp  size_tests.cpp  transpose_tests.cpp  undefined_tests.cpp
iota-tests/noun_tests/: data_tests.cpp  integer_tests.cpp  list_tests.cpp  symbols_tests.cpp
libraries/: audio-arduino  (+9 more)
libraries/iota-arduino/: CMakeLists.txt  library.properties
libraries/iota-arduino/examples/iota-arduino-protocol-server/: CMakeLists.txt  iota-arduino-protocol-server.ino  tags
libraries/iota-arduino/src/: ReliableConnection.cpp  ReliableConnection.h  SerialConnection.cpp  SerialConnection.h  tags
libraries/iota-arduino/src/effects/print/: print.cpp  print.h  print_effect_register.cpp
libraries/iota-arduino/src/effects/random/: RandomEffects.cpp
libraries/iota-arduino/src/effects/time/: TimeEffects.cpp  TimeEffects.h
libraries/iota-cpp/: CMakeLists.txt  library.properties
libraries/iota-cpp/src/: Connection.h  StorageConnection.h  adverbs.cpp  adverbs.h  api.cpp  api.h  error.h  eval_register.cpp  eval_register.h  iota-cpp.h  noun.cpp  noun.h  register.cpp  register.h  squeeze.cpp  squeeze.h  storage.cpp  storage.h  symbols.cpp  symbols.h  tags  types.h  verbs.cpp  verbs.h
libraries/iota-cpp/src/conjunctions/: conjunctions.cpp  conjunctions.h
libraries/iota-cpp/src/effects/: effect.cpp  effect.h  effect_symbols.h  effect_type.cpp  effect_type.h  effects.cpp  effects.h  effects_provider.cpp  effects_provider.h  effects_register.cpp  effects_register.h  iota_signal.cpp  iota_signal.h
libraries/iota-cpp/src/effects/log/: log_symbols.h
libraries/iota-cpp/src/effects/random/: random_symbols.h
libraries/iota-cpp/src/effects/relation/: relation.cpp  relation.h
libraries/iota-cpp/src/effects/state/: state.cpp  state.h  state_symbols.h
libraries/iota-cpp/src/effects/testing/: testing_effects_provider.cpp  testing_effects_provider.h  testing_effects_register.cpp  testing_effects_register.h
libraries/iota-cpp/src/nouns/: character.cpp  character.h  conditional.cpp  conditional.h  data.cpp  data.h  dictionary.cpp  dictionary.h  error.cpp  error.h  expression.cpp  expression.h  integer.cpp  integer.h  iota_string.cpp  iota_string.h  lens.cpp  lens.h  list.cpp  list.h  noun.cpp  noun.h  nouns.h  quoted_symbol.cpp  quoted_symbol.h  real.cpp  real.h  symbol.cpp  symbol.h
libraries/iota-cpp/src/storage/: float.cpp  float.h  float_array.cpp  float_array.h  iota_float.cpp  iota_float.h  mixed_array.cpp  mixed_array.h  storage.cpp  storage.h  word.cpp  word.h  word_array.cpp  word_array.h
src/arduino/: CMakeLists.txt  library.properties
src/arduino/examples/iota-arduino-protocol-server/: iota-arduino-protocol-server.ino
src/arduino/src/: debug.cpp  debug.h  tags
src/arduino/src/effects/print/: print.cpp  print.h  print_effect_register.h
src/arduino/src/effects/random/: RandomEffects.h
src/cpp/: CMakeLists.txt  library.properties
src/cpp/src/: adverbs.cpp  adverbs.h  api.cpp  api.h  eval_register.cpp  symbols.cpp  symbols.h  verbs.cpp  verbs.h
src/cpp/src/conjunctions/: conjunctions.h
src/cpp/src/effects/: effect_symbols.h
src/cpp/src/effects/relation/: relation.h  relation_symbols.h
src/cpp/src/effects/state/: state.cpp  state.h
src/cpp/src/effects/testing/: testing_effects_provider.cpp  testing_effects_provider.h
src/cpp/src/nouns/: bindings.cpp  bindings.h  character.h  conditional.cpp  dictionary.h  error.cpp  error.h  expression.cpp  expression.h  integer.cpp  integer.h  iota_string.cpp  iota_string.h  lens.h  list.cpp  list.h  noun.cpp  noun.h  nouns.h  quoted_symbol.cpp  range.cpp  range.h  real.h  symbol.cpp  symbol.h  symbol_definition.cpp  symbol_definition.h  user_symbol.cpp  user_symbol.h
src/teensy/: CMakeLists.txt  library.properties
src/teensy/examples/iota-teensy-protocol-server/: iota-teensy-protocol-server.ino
src/teensy/src/: iota-teensy.h  teensy_effects_provider.cpp
src/teensy/src/effects/i2c/: I2CEffects.h
src/teensy/src/effects/serial/: SerialEffects.cpp  SerialEffects.h
src/teensy/src/effects/spi/: SPIEffects.h
tests/: CMakeLists.txt  atom_tests.cpp  char_tests.cpp  enclose_tests.cpp  enumerate_tests.cpp  first_tests.cpp  floor_tests.cpp  format_tests.cpp  gradeDown_tests.cpp  gradeUp_tests.cpp  main.cpp  not_tests.cpp  noun_tests.cpp  reciprocal_tests.cpp  shape_tests.cpp  size_tests.cpp  tags  undefined_tests.cpp  unique_tests.cpp
tests/dyad_tests/: cut_tests.cpp  divide_tests.cpp  drop_tests.cpp  equal_tests.cpp  find_tests.cpp  form_tests.cpp  format2_tests.cpp  index_tests.cpp  integerDivide_tests.cpp
tests/effect_tests/: log_tests.cpp  random_tests.cpp  state_tests.cpp
tests/monad_tests/: atom_tests.cpp  char_tests.cpp  enclose_tests.cpp  enumerate_tests.cpp  expand_tests.cpp  first_tests.cpp  floor_tests.cpp  format_tests.cpp  gradeDown_tests.cpp  gradeUp_tests.cpp  group_tests.cpp  negate_tests.cpp  not_tests.cpp  noun_tests.cpp  reciprocal_tests.cpp  reverse_tests.cpp  shape_tests.cpp  size_tests.cpp  transpose_tests.cpp  undefined_tests.cpp  unique_tests.cpp
tests/squeeze_tests/: float_tests.cpp  int_tests.cpp
(+22 files in other folders)
